tambah ikon page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                     <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">5</span>
                 </button>
                 <button type="button" class="btn text-white position-relative">
-                    <i class="fa fa-user"></i>
+                    <i class="fa fa-bell"></i>
                 </button>
+                <button type="button" class="btn text-white position-relative">
+                    <i class="fa fa-user"></i>
+                </button>              
             </div>
     
             <!-- Toggler -->
