--- a/Login/PageAfterLoginCanAccess/Keranjang/Keranjang.html
+++ b/Login/PageAfterLoginCanAccess/Keranjang/Keranjang.html
@@ -50,7 +50,7 @@
       <div class="container">
           <!-- Logo -->
           <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
-              <img src="../../images/logo.png" alt="site icon" style="width: 100px; height: auto;">
+              <img src="../../../images/logo.png" alt="site icon" style="width: 100px; height: auto;">
           </a>
   
           <!-- Icon Buttons -->
@@ -59,6 +59,9 @@
                   <i class="fa fa-shopping-cart"></i>
                   <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">5</span>
               </button>
+              <button type="button" class="btn text-white position-relative">
+                <i class="fa fa-bell"></i>
+            </button>
               <button type="button" class="btn text-white position-relative">
                   <i class="fa fa-user"></i>
               </button>
